--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^5.10.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.0",
+    "redis": "^4.5.1",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.0"
   },
