--- a/.env
+++ b/.env
@@ -8,3 +8,8 @@ DATABASE_TEST = mongodb+srv://test:test@demo.aoloa.mongodb.net/test?retryWrites=
 
 key='secret'
 
+const CLIENT_ID='955500837827-ne046hmqjtsr6hpms2jd8e8t456mkcnm.apps.googleusercontent.com'
+const CLIENT_SECRET='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'
+const REDIRECT_URI='https://developers.google.com/oauthplayground'
+const REFRESH_TOKEN='1//04I4xzV5g8eRhCgYIARAAGAQSNwF-L9Ir_UgnrGi2Pn7Ik-m6Fkl0Lk_R4tLORnKraRZXXaWWBr4KljPltk3GVe-mnircWWrWNRE'
+
